Fix scrollbar caused by footer at large resolutions

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -135,7 +135,6 @@ table.highlighttable div.highlight pre {
     display:flex;
     position: relative;
     left: -15px;
-    width: 102%;
     height: 30px;
     color:#eeeeee;
     text-align: center;
